# NekoDrop

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx  bundleState.ts  currentTransferRecovery.ts  deviceDisplay.ts  dragDrop.ts  localBridgeState.ts  networkPermissionHints.ts  pairingFailureAdvice.ts  platformDisplay.ts  receiveDiagnostics.ts  refreshSchedule.ts  securityState.ts  settingsView.ts  styles.css  tauri.ts  transferFailureAdvice.ts  transferHistoryDetails.ts  transferProgress.ts  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: app_config.rs  app_state.rs  device_identity.rs  discovery.rs  local_bridge_authorizations.rs  local_bridge_runtime.rs  main.rs  network.rs  transfer_history.rs  trusted_devices.rs
apps/desktop/src-tauri/src/commands/: bundle_helpers.rs  device_dtos.rs  dto.rs  local_bridge_action_results.rs  local_bridge_dtos.rs  local_bridge_events.rs  local_bridge_responses.rs  mod.rs  path_dialog.rs  receive_diagnostics.rs  staged_bundles.rs  transfer_dtos.rs  transfer_feedback.rs  transfer_targets.rs  user_paths.rs
apps/desktop/src-tauri/src/events/: mod.rs
apps/desktop/src-tauri/src/platform/: mod.rs
apps/desktop/src-tauri/src/tray/: mod.rs
apps/desktop/src/components/: ActivityInspector.tsx  DevicesManager.tsx  Icon.tsx  InboxDrawer.tsx  InboxDropdown.tsx  LeftSidebar.tsx  (+4 more)
apps/desktop/test/: bundleSamples.test.mjs  bundleState.test.ts  currentTransferRecovery.test.ts  deviceDisplay.test.ts  genericAdapterSample.test.mjs  localBridgeState.test.ts  networkPermissionHints.test.ts  pairingFailureAdvice.test.ts  realtimeSnapshot.test.mjs  receiveDiagnostics.test.ts  refreshSchedule.test.mjs  refreshSchedule.test.ts  securityState.test.ts  settingsLayout.test.mjs  settingsView.test.ts  transferFailureAdvice.test.ts  transferHistoryDetails.test.ts  transferMetricsState.test.mjs  transferProgress.test.ts
apps/sidecar/: Cargo.toml
apps/sidecar/src/: main.rs
crates/nekodrop-core/: Cargo.toml
crates/nekodrop-core/src/: config.rs  device.rs  errors.rs  lib.rs  manifest.rs  pairing.rs  transfer.rs
crates/nekodrop-network/: Cargo.toml
crates/nekodrop-network/src/: client.rs  connection_ticket.rs  discovery.rs  lib.rs  protocol.rs  server.rs  tcp_file.rs  transport.rs
crates/nekodrop-service/: Cargo.toml
crates/nekodrop-service/src/: lib.rs
crates/nekodrop-storage/: Cargo.toml
crates/nekodrop-storage/src/: bundle.rs  checksum.rs  chunk.rs  lib.rs  manifest_builder.rs  receive_dir.rs  received_file.rs  resume.rs  space.rs
crates/nekolink-protocol/: Cargo.toml
crates/nekolink-protocol/src/: lib.rs
docs/: ADAPTER_SPEC.md  ARCHITECTURE.md  BUNDLE_SPEC.md  DEVELOPMENT.md  FUTURE_ITERATION_PLAN.md  MODULES.md  NEW_DESKTOP_DESIGN.md  NEXT_PHASE_ANALYSIS.md  PRODUCT.md  PROTOCOL.md  README.md  ROADMAP.md  SECURITY.md  STATUS.md
docs/bundle-samples/: index.json
docs/bundle-samples/agent-profile/: bundle.json  checksums.json  permissions.json
docs/bundle-samples/config-snapshot/: bundle.json  checksums.json  permissions.json
docs/bundle-samples/session-summary/: bundle.json  checksums.json  permissions.json
docs/bundle-samples/skill-basic/: bundle.json  checksums.json  permissions.json
docs/bundle-samples/workspace-fragment/: bundle.json  checksums.json  permissions.json
docs/examples/generic-adapter/: README.md  generic-adapter.mjs  generic-adapter.test.mjs
docs/modules/: DISCOVERY_AND_TRANSPORT.md  MODULE_ROADMAP.md  NEKODROP.md  NEKOLINK.md  OPENNEKO_ECOSYSTEM.md
docs/superpowers/plans/: 2026-06-11-large-file-scan-status.md  2026-06-11-receive-space-preflight.md  2026-06-11-security-reliability-hardening.md  2026-06-14-bundle-detection-staging.md  2026-06-14-bundle-staging-lifecycle.md  2026-06-14-console-shell-redesign.md  2026-06-14-desktop-bundle-receive-preview-report.md  2026-06-14-desktop-bundle-staging-actions.md  2026-06-14-local-bridge-api-skeleton.md  2026-06-14-local-bridge-auth-gate.md  2026-06-14-local-bridge-authorization-scopes.md  2026-06-14-local-bridge-client-identity.md  2026-06-14-local-bridge-protocol.md  2026-06-14-nekolink-bundle-manifest.md  2026-06-14-service-bundle-detected-event.md  2026-06-14-session-control-desktop-wiring.md  2026-06-14-staged-bundle-detail.md  2026-06-14-ui-bundle-receive-preview.md
docs/superpowers/specs/: 2026-06-11-large-file-scan-status-design.md  2026-06-11-receive-space-preflight-design.md
docs/testing/: LARGE_FILE_TRANSFER_MATRIX.md  RESULT_TEMPLATE.md
docs/testing/results/: 2026-06-12-830e4d8-codex.md
scripts/: audit-supported-platforms.mjs  audit-supported-platforms.test.mjs  package-desktop.sh  package-windows.ps1
(+8 files in other folders)
