[workspace]
resolver = "2"
members = [
  "apps/sidecar",
  "apps/desktop/src-tauri",
  "crates/nekodrop-core",
  "crates/nekodrop-network",
  "crates/nekodrop-service",
  "crates/nekodrop-storage",
  "crates/nekolink-protocol",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = ""
version = "0.1.0"
