[package]
name = "nekodrop-service"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nekodrop-core = { path = "../nekodrop-core" }
nekodrop-network = { path = "../nekodrop-network" }
nekodrop-storage = { path = "../nekodrop-storage" }

[lib]
path = "src/lib.rs"
