[package]
name = "nekodrop-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nekodrop-core = { path = "../nekodrop-core" }
nekolink-protocol = { path = "../nekolink-protocol" }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
walkdir = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem"] }

[lib]
path = "src/lib.rs"
