[package]
name = "nekolink-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
base64 = "0.22"
getrandom = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
hkdf = "0.12"
sha2 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }

[lib]
path = "src/lib.rs"
