[package]
name = "nekolink-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aes-gcm = "0.10"
base64 = "0.22"
chacha20poly1305 = "0.10"
ed25519-dalek = "2"
getrandom = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
hkdf = "0.12"
sha2 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }

[lib]
path = "src/lib.rs"
